<resources>
    <string name="app_name">Gym Bro</string>
    <string name="button_create_workout_schedule">Create Workout Schedule</string>
    <string name="start_workout">Start Workout</string>
    <string name="hardcoded_exercise_name">Pushup</string>
    <string name="hardcoded_timer">00:30</string>
    <string name="set_up_a_workout_schedule">Set Up a Workout Schedule</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="_00">00</string>
    <string name="_08">08</string>
    <string name="_colon">:</string>
    <string name="mon">Mon</string>
    <string name="tues">Tue</string>
    <string name="wed">Wed</string>
    <string name="thurs">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="next">Next</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="select_workout">Select Workout</string>
    <string name="sets">Sets</string>
    <string name="reps">Reps</string>
    <string name="btn_advance_exercise">Add Exercise</string>
    <string name="btn_back">Back</string>
    <string name="btn_exercise_vid">See Video</string>
    <string name="finish_a_set">Finish a set</string>
    <string name="search">Search</string>
    <string name="dialog_workout_name_edittext">e.g Push Pull Legs</string>
</resources>