<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSetUpWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:text="@string/set_up_a_workout_schedule"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/btnAm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/am"/>
                <Button
                    android:id="@+id/btnPm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pm"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/scrollHours"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/_08"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/_colon"
                    android:gravity="center"/>

                <NumberPicker
                    android:id="@+id/scrollMins"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:text="@string/_00"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnMon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="6.25sp"
                    android:text="@string/mon"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/btnTues"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="6.25sp"
                    android:text="@string/tues"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/btnWed"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="6.25sp"
                    android:text="@string/wed"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/btnThurs"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="5.11sp"
                    android:text="@string/thurs"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/btnFri"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="6.25sp"
                    android:text="@string/fri"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/btnSat"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="6.25sp"
                    android:text="@string/sat"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/btnSun"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:textSize="6.25sp"
                    android:text="@string/sun"
                    tools:ignore="SmallSp" />

            </LinearLayout>


            <Button
                android:id="@+id/btnNext"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/next"/>


    </LinearLayout>



</RelativeLayout>