<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSetUpWorkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:text="@string/set_up_a_workout_schedule"/>
        </LinearLayout>

        <!--            <LinearLayout-->
        <!--                android:layout_width="wrap_content"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginBottom="20dp"-->
        <!--                android:orientation="horizontal"-->
        <!--                android:layout_gravity="center">-->

        <!--                <Button-->
        <!--                    android:id="@+id/btnAm"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:text="@string/am"/>-->
        <!--                <Button-->
        <!--                    android:id="@+id/btnPm"-->
        <!--                    android:layout_width="wrap_content"-->
        <!--                    android:layout_height="wrap_content"-->
        <!--                    android:text="@string/pm"/>-->

        <!--            </LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <!--                <NumberPicker-->
            <!--                    android:id="@+id/scrollHours"-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="wrap_content"-->
            <!--                    android:textSize="25sp"-->
            <!--                    android:textStyle="bold"-->
            <!--                    android:textColor="@color/black"-->
            <!--                    android:text="@string/_08"/>-->

            <!--                <TextView-->
            <!--                    android:layout_width="wrap_content"-->
            <!--                    android:layout_height="match_parent"-->
            <!--                    android:textSize="25sp"-->
            <!--                    android:textStyle="bold"-->
            <!--                    android:textColor="@color/black"-->
            <!--                    android:text="@string/_colon"-->
            <!--                    android:gravity="center"/>-->

            <TimePicker
                android:id="@+id/time_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:headerBackground="@android:color/holo_blue_dark"
                android:numbersSelectorColor="@android:color/holo_blue_dark"
                android:textColor="@color/black"
                android:text="@string/_00"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:id="@+id/btnMon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:text="@string/mon"
                android:textSize="12sp"
                android:padding="0dp"
                android:backgroundTint="#808080"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/btnTues"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:padding="0dp"
                android:text="@string/tues"
                android:backgroundTint="#808080"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/btnWed"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:padding="0dp"
                android:text="@string/wed"
                android:backgroundTint="#808080"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/btnThurs"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:padding="0dp"
                android:text="@string/thurs"
                android:backgroundTint="#808080"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/btnFri"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:padding="0dp"
                android:text="@string/fri"
                android:backgroundTint="#808080"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/btnSat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:padding="0dp"
                android:text="@string/sat"
                android:backgroundTint="#808080"
                tools:ignore="SmallSp" />
            <Button
                android:id="@+id/btnSun"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="5dp"
                android:textSize="12sp"
                android:padding="0dp"
                android:text="@string/sun"
                android:backgroundTint="#808080"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>